@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@openmailbox.org>
-" Last Change: April 09, 2016
+" Last Change: April 14, 2016
 " Based On:    Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -18,9 +18,9 @@ syntax keyword vifmCommand contained alink apropos bmark bmarks bmgo change
 		\ e[dit] el[se] empty en[dif] exi[t] file filter fin[d] fini[sh] gr[ep]
 		\ h[elp] his[tory] jobs locate ls lstrash marks mes[sages] mkdir m[ove]
 		\ noh[lsearch] on[ly] popd pushd pu[t] pw[d] q[uit] redr[aw] reg[isters]
-		\ rename restart restore rlink screen sh[ell] sor[t] sp[lit] s[ubstitute]
-		\ touch tr trashes sync undol[ist] ve[rsion] vie[w] vifm vs[plit] winc[md]
-		\ w[rite] wq x[it] y[ank] nextgroup=vifmArgs
+		\ rename restart restore rlink screen select sh[ell] sor[t] sp[lit]
+		\ s[ubstitute] touch tr trashes sync undol[ist] ve[rsion] vie[w] vifm
+		\ vs[plit] winc[md] w[rite] wq x[it] y[ank] nextgroup=vifmArgs
 
 " commands that might be prepended to a command without changing everything else
 syntax keyword vifmPrefixCommands contained windo winrun
